--- a/index.css
+++ b/index.css
@@ -1,7 +1,11 @@
-import googleapis.com/css
+/* Reset */
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
+
+/* Basic */
 body {
     line-height: 1;
 }
@@ -29,7 +33,6 @@ body {
 }
 
 /* Box Model */
-
 *, *:before, *:after {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -37,7 +40,6 @@ body {
 }
 
 /* Basic */
-
 @-ms-viewport {
     width: device-width;
 }
@@ -47,39 +49,33 @@ body {
 }
 
 @media screen and (max-width: 480px) {
-
     html, body {
         min-width: 320px;
     }
-
 }
 
-
 body {
-    background-color:rgb(3, 27, 17);
-    
+    background-color: rgb(3, 27, 17);
     padding: auto;
 }
 
-.main{
-    margin: .9%;
-    padding: .9%;
+.main {
+    margin: 0.9%;
+    padding: 0.9%;
     background-image: url('images/ba1.jpg');
     background-position: center;
     background-size: cover;
     box-shadow: 3px 4px 4px 3px 4px 4px whitesmoke;
 }
 
-.mainNav, ul{
+.mainNav, ul {
     display: flex;
     justify-content: center;
     background-color: transparent;
     min-width: 100%;
     height: auto;
     margin: auto;
-    
 }
-
 
 .mainNav li, .mainNav a {
     position: relative;
@@ -88,15 +84,14 @@ body {
     margin: 0% 5% 5%;
     padding-right: 3px;
     text-decoration: none;
-    list-style-type: none; 
+    list-style-type: none;
     font-size: 1.5rem;
     font-weight: bold;
     color: rgb(255, 255, 255);
-    transition: .5s ease-in-out;
-
+    transition: 0.5s ease-in-out;
 }
 
-.mainNav a:hover{
+.mainNav a:hover {
     color: green;
 }
 
@@ -120,8 +115,7 @@ body {
     text-align: center;
 }
 
-    
-.welcome ~h3 {
+.welcome ~ h3 {
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
     color: whitesmoke;
@@ -132,8 +126,8 @@ body {
     height: auto;
     border-radius: 100%;
     box-shadow: 6px 5px 10px yellow;
-    transition: all 0.5s ease; /* Added a transition for smooth animation */
-    animation: rotate 4s linear infinite; /* Added continuous rotation animation */
+    transition: all 0.5s ease;
+    animation: rotate 4s linear infinite;
 }
 
 @keyframes rotate {
@@ -145,10 +139,7 @@ body {
     }
 }
 
-
-
-
- .books, .articles, .blogs {
+.books, .articles, .blogs {
     background-image: url(images/ba1.jpg);
     background-position: center;
     background-size: cover;
@@ -159,25 +150,28 @@ body {
     float: left;
     margin-right: 0.1%;
     border-radius: 30px;
-    
 }
+
 .btn {
-    margin-left: 30%; margin-right: auto;
+    margin-left: 30%;
+    margin-right: auto;
     border-radius: 50%;
     box-shadow: 1px 2px rgb(3, 54, 26);
-    font-family:Georgia, Courier,'Times New Roman', Times, serif;
+    font-family: Georgia, Courier, 'Times New Roman', Times, serif;
     font-weight: bolder;
     padding: 2%;
 }
+
 .btn:hover {
     background-image: url(glogo.png);
 }
 
-.section2 { 
-    width: 99; margin-top: 19%;
+.section2 {
+    width: 99%;
+    margin-top: 19%;
 }
-    
-.videos, .audios, .ai{
+
+.videos, .audios, .ai {
     background-image: url(images/ba1.jpg);
     background-position: center;
     background-size: cover;
@@ -191,10 +185,7 @@ body {
     border-radius: 30px;
 }
 
-
-
 /* Footer */
-
 #footer {
     padding: 4em 0 2em 0;
     background-color: #034236;
@@ -202,275 +193,42 @@ body {
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
+#footer .inner {
+    width: 50%;
+    margin: 0 auto;
+}
+
+@media screen and (max-width: 980px) {
     #footer .inner {
-        width: 50%;
-        margin: 0 auto;
+        width: 75%;
     }
+}
 
-        @media screen and (max-width: 980px) {
-
-            #footer .inner {
-                width: 75%;
-            }
-
-        }
-
-        @media screen and (max-width: 480px) {
-
-            #footer .inner {
-                width: 90%;
-            }
-
-        }
-
-    #footer .copyright {
-        color: rgba(255, 255, 255, 0.5);
-        font-size: 0.9em;
-        margin: 0 0 2em 0;
-        padding: 0;
-        text-align: center;
-    }
-
-    @media screen and (max-width: 736px) {
-
-        #footer {
-            padding: 3em 0 1em 0;
-            text-decoration: none;
-        }
-        .icons {
-            text-decoration: none;
-            border-bottom: none;
-            position: relative;
-        }
-    
-            .icons:before {
-                -moz-osx-font-smoothing: grayscale;
-                -webkit-font-smoothing: antialiased;
-                font-family: FontAwesome;
-                font-style: normal;
-                font-weight: normal;
-                text-transform: none !important;
-            }
-    
-            .icons > .label {
-                display: none;
-            }
-
-        
-
-    }
-
-.fix, .fix.span {
-    color: inherit;
-   
-    /* Reset */
-    * {
-        box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-    }
-    
-    body {
-        line-height: 1;
-        -webkit-text-size-adjust: none;
-        background-color: rgb(3, 27, 17);
-        font-family: 'Source Sans Pro', sans-serif;
-    }
-    
-    ol, ul {
-        list-style: none;
-    }
-    
-    blockquote, q {
-        quotes: none;
-    }
-    
-    blockquote:before, blockquote:after, q:before, q:after {
-        content: '';
-        content: none;
-    }
-    
-    table {
-        border-collapse: collapse;
-        border-spacing: 0;
-    }
-    
-    /* Basic */
-    
-    body {
-        -ms-overflow-style: scrollbar;
-    }
-    
-    /* Responsive Layout */
-    @media (max-width: 768px) {
-        /* Adjust styles for smaller screens here */
-        .mainNav {
-            flex-direction: column;
-        }
-    
-        .mainNav li {
-            margin: 5% 0;
-        }
-    }
-    
-    /* Main Container */
-    .main {
-        margin: 2%;
-        padding: 2%;
-        background-image: url('images/ba1');
-        background-position: center;
-        background-size: cover;
-        box-shadow: 4px 4px 4px whitesmoke;
-    }
-    
-    /* Navigation */
-    .mainNav {
-        display: flex;
-        justify-content: center;
-        background-color: transparent;
-    }
-    
-    .mainNav li, .mainNav a {
-        position: relative;
-        display: block;
-        margin: 0 5% 5%;
-        padding-right: 3px;
-        text-decoration: none;
-        list-style-type: none;
-        font-size: 1.5rem;
-        font-weight: bold;
-        color: rgb(255, 255, 255);
-        transition: .5s ease-in-out;
-    }
-    
-    .mainNav a:hover {
-        color: green;
-    }
-    
-    .listContent a {
-        clear: both;
-        top: 10px;
-        font-size: medium;
-        display: none;
-        color: rgba(7, 241, 27, 0.966);
-        box-shadow: 4px 4px 4px white;
-    }
-    
-    .mainNav li:hover .listContent a {
-        display: block;
-        position: relative;
-    }
-    
-    /* Welcome Section */
-    .welcome {
-        color: rgb(233, 233, 11);
-        text-align: center;
-    }
-    
-    .welcome ~ h3 {
-        text-align: center;
-        color: whitesmoke;
-    }
-    
-    #logo {
-        width: 6%;
-        height: auto;
-        border-radius: 100%;
-        box-shadow: 2px 3px 10px yellow;
-    }
-    
-    .welcome:hover #logo {
-        box-shadow: 2px 4px 10px red;
-        transform: rotate(360deg);
-        animation: move 4s;
-    }
-    
-    /* Feature Boxes */
-    .feature-box {
-        background-image: url(images/ba1.jpg);
-        background-position: center;
-        background-size: cover;
-        display: block;
-        height: fit-content;
-        width: 33%;
-        padding: 2%;
-        float: left;
-        margin-right: 1%;
-        border-radius: 30px;
-        margin-top: 4%;
-    }
-    
-    .btn {
-        margin-left: 40%;
-        border-radius: 13px;
-        box-shadow: 1px 2px whitesmoke;
-        padding: 3%;
-    }
-    
-    /* Section 2 */
-    .section2 {
-        margin-top: 19%;
-        margin-left: 12%;
-    }
-    
-    .videos, .audios {
-        background-image: url(images/ba1.jpg);
-        background-position: center;
-        background-size: cover;
-        display: block;
-        height: fit-content;
-        width: 46%;
-        padding: 2%;
-        float: left;
-        margin-right: 1%;
-        border-radius: 30px;
-    }
-    
-    /* Footer */
-    #footer {
-        padding: 4em 0 2em 0;
-        background-color: #034236;
-        text-align: center;
-        font-family: Georgia, 'Times New Roman', Times, serif;
-    }
-    
+@media screen and (max-width: 480px) {
     #footer .inner {
-        width: 50%;
-        margin: 0 auto;
+        width: 90%;
     }
-    
-    @media (max-width: 980px) {
-        #footer .inner {
-            width: 75%;
-        }
-    }
-    
-    @media (max-width: 480px) {
-        #footer .inner {
-            width: 90%;
-        }
-    }
-    
-    #footer .copyright {
-        color: rgba(255, 255, 255, 0.5);
-        font-size: 0.9em;
-        margin: 0 0 2em 0;
-        padding: 0;
-        text-align: center;
-    }
-    
-    .icons {
-        border-bottom: none;
-    }
-    
-    .icons:before {
-        -moz-osx-font-smoothing: grayscale;
-        -webkit-font-smoothing: antialiased;
-        font-family: FontAwesome;
-        font-style: normal;
-        font-weight: normal;
-        text-transform: none !important;
-    }
+}
+
+#footer .copyright {
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 0.9em;
+    margin: 0 0 2em 0;
+    padding: 0;
+    text-align: center;
+}
+
+.icons {
+    border-bottom: none;
+}
+
+.icons:before {
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-transform: none !important;
 }
 
 li, a {
