--- a/index.css
+++ b/index.css
@@ -139,13 +139,13 @@ body {
     }
 }
 
-.books, .articles, .blogs {
+.books, .articles, .blogs, .videos, .audios {
     background-image: url(images/ba1.jpg);
     background-position: center;
     background-size: cover;
     display: block;
     height: fit-content;
-    width: 33%;
+    width: 48%;
     padding: 1.9%;
     float: left;
     margin-right: 0.1%;
@@ -164,25 +164,6 @@ body {
 
 .btn:hover {
     background-image: url(glogo.png);
-}
-
-.section2 {
-    width: 99%;
-    margin-top: 19%;
-}
-
-.videos, .audios, .ai {
-    background-image: url(images/ba1.jpg);
-    background-position: center;
-    background-size: cover;
-    margin-top: 4%;
-    display: block;
-    height: fit-content;
-    width: 33%;
-    padding: 1.9%;
-    float: left;
-    margin-right: 0.1%;
-    border-radius: 30px;
 }
 
 /* Footer */
@@ -235,3 +216,71 @@ li, a {
     text-decoration: none;
     color: rgb(109, 109, 112);
 }
+
+
+
+
+        /* Style for the button */
+        .redirect-button {
+            position: fixed;
+            bottom: 10px;
+            left: 10px;
+            padding: 10px;
+            background-image: url("images/banner.jpg");
+            color: whitesmoke;
+            border-radius: 50%;
+            cursor: shadow;
+        }
+
+        /* Additional styles for the container */
+        .ai {
+            position: fixed;
+            bottom: 10px;
+            left: 10px;
+        }
+
+
+
+        .modal {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 20px;
+            background-color: #fff;
+            border: 1px solid #ddd;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            z-index: 1000;
+        }
+
+        .modal-overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: 999;
+        }
+
+
+          /* Styling for the modal1 */
+          .modal1 {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modal-content {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 5%;
+        }
