--- a/index.css
+++ b/index.css
@@ -153,7 +153,7 @@ body {
 }
 
 .btn {
-    margin-left: 30%;
+    margin-right: 30%;
     margin-right: auto;
     border-radius: 50%;
     box-shadow: 1px 2px rgb(3, 54, 26);
