--- a/index.css
+++ b/index.css
@@ -113,6 +113,7 @@ body {
     color: rgb(233, 233, 11);
     font-family: 'fire', 'Courier New', Courier, monospace;
     text-align: center;
+    font-size:300%;
 }
 
 .welcome ~ h3 {
@@ -238,8 +239,6 @@ li, a {
             bottom: 10px;
             left: 10px;
         }
-
-
 
         .modal {
             display: none;
